RESOLVED FIXED161156
REGRESSION: js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5.html has a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=161156
Summary REGRESSION: js/dom/prototype-chain-caching-with-impure-get-own-property-slot-...
Ryan Haddad
Reported 2016-08-24 12:50:07 PDT
LayoutTest js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5.html is a flaky failure https://build.webkit.org/builders/Apple%20Yosemite%20Release%20WK2%20(Tests)/builds/17320 https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=js%2Fdom%2Fprototype-chain-caching-with-impure-get-own-property-slot-traps-5.html --- /Volumes/Data/slave/yosemite-release-tests-wk2/build/layout-test-results/js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5-expected.txt +++ /Volumes/Data/slave/yosemite-release-tests-wk2/build/layout-test-results/js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5-actual.txt @@ -48,8 +48,8 @@ PASS typeof f() is "function" PASS typeof f() is "function" PASS typeof f() is "function" -PASS typeof f() is "object" -PASS typeof f() is "object" +FAIL typeof f() should be object. Was function. +FAIL typeof f() should be object. Was function. PASS typeof f() is "object" PASS typeof f() is "object" PASS typeof f() is "object"
Attachments
the patch (3.94 KB, patch)
2017-06-08 12:43 PDT, Filip Pizlo
saam: review+
Ryan Haddad
Comment 1 2016-08-30 12:44:29 PDT
Ryosuke Niwa
Comment 2 2016-08-30 15:02:06 PDT
Oh this is a real regression. We're not clearing the inline cache in time sometimes!
Radar WebKit Bug Importer
Comment 3 2016-09-01 09:04:33 PDT
Filip Pizlo
Comment 4 2017-06-08 12:43:17 PDT
Created attachment 312334 [details] the patch
Filip Pizlo
Comment 5 2017-06-08 13:08:50 PDT
Claudio Saavedra
Comment 6 2017-06-09 04:27:15 PDT
The test is missing an expectation file. Is this intentional?
Yusuke Suzuki
Comment 7 2017-06-09 04:29:49 PDT
(In reply to Claudio Saavedra from comment #6) > The test is missing an expectation file. Is this intentional? I don't think so. We should add expectation file.
Ryan Haddad
Comment 8 2017-06-09 14:40:30 PDT
(In reply to Yusuke Suzuki from comment #7) > (In reply to Claudio Saavedra from comment #6) > > The test is missing an expectation file. Is this intentional? > > I don't think so. We should add expectation file. I went ahead and added one in https://trac.webkit.org/changeset/218013/webkit
Sam Weinig
Comment 9 2017-06-10 19:04:02 PDT
platform/Mac/TestExpectations still has js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5.html listed as [ Pass Failure ], pointing to this bug. Can we remove it from the list now?
Saam Barati
Comment 10 2017-06-12 12:00:42 PDT
(In reply to Sam Weinig from comment #9) > platform/Mac/TestExpectations still has > js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5. > html listed as [ Pass Failure ], pointing to this bug. Can we remove it from > the list now? I went ahead and did this: https://trac.webkit.org/changeset/218122/webkit
Sam Weinig
Comment 11 2017-06-12 15:14:23 PDT
(In reply to Saam Barati from comment #10) > (In reply to Sam Weinig from comment #9) > > platform/Mac/TestExpectations still has > > js/dom/prototype-chain-caching-with-impure-get-own-property-slot-traps-5. > > html listed as [ Pass Failure ], pointing to this bug. Can we remove it from > > the list now? > > I went ahead and did this: > https://trac.webkit.org/changeset/218122/webkit Cool cool.
Note You need to log in before you can comment on or make changes to this bug.